Fix portada Spotify/YouTube en HUD (Modern 0.9.9, 1.8.9 2.1.32).
Modern escala la textura completa; 1.8.9 lee cache del launcher; IPC manda file:// cuando la carátula ya está en disco.

Co-authored-by: Cursor <cursoragent@cursor.com>